add EventEmitter and Output

--- a/practice/src/app/components/form/input/input.component.html
+++ b/practice/src/app/components/form/input/input.component.html
@@ -4,8 +4,8 @@
     type="text"
     id="username"
     placeholder="Insert a username..."
-    [(ngModel)]="username"
+    [(ngModel)]="defaultUsername"
   />
   <button type="reset" (click)="clearUsername()">Reset Form</button>
-  <span>User: {{ username }}</span>
+  <span>User: {{ defaultUsername }}</span>
 </div>
