add blog and dynamic route pages

--- a/practice/src/app/components/tasks/task/task.component.html
+++ b/practice/src/app/components/tasks/task/task.component.html
@@ -1,5 +1,7 @@
 <li>
-  <h3>{{ taskProp.title }}</h3>
+  <a routerLink="/tasks/{{ taskProp.id }}">
+    <h3>{{ taskProp.title }}</h3>
+  </a>
   <p>{{ taskProp.description }}</p>
   <p *ngIf="taskProp.showTodaysDate">Date: {{ taskProp.todaysDate }}</p>
   <button (click)="addTodaysDate(taskProp.id)">Add Today's Date</button>
