--- a/practice/src/app/app.component.html
+++ b/practice/src/app/app.component.html
@@ -1,3 +1,21 @@
-<app-first-section></app-first-section>
-<app-form></app-form>
-<app-tasks></app-tasks>
+<section>
+  <p><strong>Navigation Menu:</strong></p>
+  <ul>
+    <li>
+      <a routerLink="/firstsection">Go to First Section</a>
+    </li>
+    <li>
+      <a routerLink="/form">Go to Form</a>
+    </li>
+    <li>
+      <a routerLink="/tasks">Go to Tasks</a>
+    </li>
+    <li>
+      <a routerLink="/blog">Go to Blog</a>
+    </li>
+    <li>
+      <a routerLink="/firebase">Go to FB Component</a>
+    </li>
+  </ul>
+</section>
+<router-outlet></router-outlet>
