--- a/practice/src/app/components/fb/fb.component.html
+++ b/practice/src/app/components/fb/fb.component.html
@@ -1,1 +1,3 @@
-<p>fb works!</p>
+<p>Nothing here for a while...</p>
+<button (click)="checkValues()">Check Database</button>
+<button (click)="createUser()">Add McChicken to Database</button>
