add firebase auth

--- a/practice/src/app/app.component.html
+++ b/practice/src/app/app.component.html
@@ -16,6 +16,9 @@
     <li>
       <a routerLink="/firebase">Go to FB Component</a>
     </li>
+    <li>
+      <a routerLink="/authentication">Go to FB Auth Page</a>
+    </li>
   </ul>
 </section>
 <router-outlet></router-outlet>
