add books-test-api route

--- a/angular-training/src/app/home/home.component.html
+++ b/angular-training/src/app/home/home.component.html
@@ -28,4 +28,8 @@
   <li>
     <a routerLink="/form">Angular Forms</a>
   </li>
+
+  <li>
+    <a routerLink="/books-test-api">Testing Books API</a>
+  </li>
 </ul>
