add rxjs operators component

--- a/angular-training/src/app/home/home.component.html
+++ b/angular-training/src/app/home/home.component.html
@@ -32,4 +32,8 @@
   <li>
     <a routerLink="/books-test-api">Testing Books API</a>
   </li>
+
+  <li>
+    <a routerLink="/rxjs-operators">RxJS Operators</a>
+  </li>
 </ul>
