--- a/angular-training/src/app/home/home.component.html
+++ b/angular-training/src/app/home/home.component.html
@@ -36,4 +36,8 @@
   <li>
     <a routerLink="/rxjs-operators">RxJS Operators</a>
   </li>
+
+  <li>
+    <a routerLink="/counter-ngrx">Counter with NgRX</a>
+  </li>
 </ul>
